# optimization

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build_wheels.yml  tests.yml  tests_and_build_wheels.yml
examples/scripts/: example58.py  formatting.py  logger.py  pareto_set.py  rosenbrock.py  runknapsack.py  simple_quadratic.py  test_functions.py
examples/stochastic/: ols.py  test.py
examples/teaching/: polyhedron_2d.py  simplex.py  tableau.py
src/biogeme_optimization/: __init__.py  algebra.py  bfgs.py  biogeme_logging.py  bounds.py  diagnostics.py  exceptions.py  floating_point.py  format.py  function.py  hybrid_function.py  linesearch.py  logging.py  neighborhood.py  pareto.py  simple_bounds.py  stochastic_function.py  stochastic_simple_bounds.py  trust_region.py  vns.py
src/biogeme_optimization/teaching/: __init__.py  linear_optimization.py  matrices.py  plot_function.py  polyhedron_2d.py  simplex.py  tableau.py  to_jupyter.py  variables.py
src/biogeme_optimization/teaching/linear_constraints/: __init__.py  constraint.py  draw_polyhedron.py  linear_constraints.py  polyhedron_2d.py  standard_canonical.py  standard_form.py  variable.py
tests/: examples.py  knapsack.py  test_algebra.py  test_bounds.py  test_constraints.py  test_floating_point.py  test_function.py  test_hybrid_function.py  test_linear_constraints.py  test_linear_optimization.py  test_linesearch.py  test_matrices.py  test_neighborhood.py  test_pareto.py  test_plot_function.py  test_polyhedron_2d.py  test_simple_bounds.py  test_simplex.py  test_standard_canonical.py  test_standard_form.py  test_tableau.py  test_trust_region.py  test_variables.py  test_vns.py
tests/functions/: examples.py  test_bfgs.py  test_bounds.py  test_format.py  test_function.py  test_hybrid_function.py  test_linesearch.py  test_simple_bounds.py  test_trust_region.py
