[build-system]
requires = [
    "setuptools>=75.6.0",
    "wheel>=0.45.1",
]
build-backend = "setuptools.build_meta"


[project]
name = "biogeme-optimization"
dynamic = ["version"]
description = "Various optimization algorithms for teaching and research"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Michel Bierlaire", email = "michel.bierlaire@epfl.ch" }]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
    "numpy>=2.2.6, <3",
    "scipy>=1.15.3, <2",
    "matplotlib>=3.10.3, <4",
    "tomlkit>=0.13.2, <1"
]

[project.optional-dependencies]
testing = [
    "pytest >= 8.3.5",
    "pytest-cov >= 6.1.1",
    "tox >= 4.26.0"
]

[project.urls]
Code = "https://github.com/michelbierlaire/optimization"
homepage = "http://biogeme.epfl.ch"
download-url = "https://pypi.org/project/bierlaire-optimization"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "biogeme_optimization.version.__version__" }
